--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(OneStageSS)
 export(add_ctu_header)
 export(coloured_text)
+export(install.univ.packages)
 export(report_pdf)
 export(template_rando_code)
 export(unibeRed)
@@ -23,6 +24,7 @@ importFrom(fs,path_package)
 importFrom(glue,glue)
 importFrom(grDevices,rgb)
 importFrom(htmltools,tags)
+importFrom(jsonlite,stream_in)
 importFrom(stats,pbinom)
 importFrom(utils,download.file)
 importFrom(whisker,whisker.render)
