--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,19 +2,20 @@ Package: CTUtemplate
 Title: Example RStudio Project Templates
 Author: Alan G. Haynes
 Maintainer: Alan G. Haynes <alan.haynes@unibe.ch>
-Version: 0.6.6
+Version: 0.6.7
 Description: Templates and functions for use in CTU Bern.
 Depends: 
   R (>= 3.3.2)
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Imports: 
   bookdown,
   fs,
   glue,
   htmltools,
+  jsonlite,
   pingr,
   rstudioapi,
   stringr,
